package bigtalkdesignMod.v06.v6_7;

public interface ISale {
    public double acceptCash(double price, int num);
}
